--- a/src/__docs__/OverlayTrigger.mdx
+++ b/src/__docs__/OverlayTrigger.mdx
@@ -3,7 +3,7 @@ name: Overlay Trigger
 ---
 
 import { Playground, Props } from 'docz';
-import Tooltip from './../basic/Tooltip.js';
+import { Tooltip } from './../components/tooltip';
 import OverlayTrigger from './../basic/OverlayTrigger.js';
 
 # Overlay Trigger
