--- a/src/elements/form/__docs__/select.docs.mdx
+++ b/src/elements/form/__docs__/select.docs.mdx
@@ -10,19 +10,14 @@ import { Select } from './../index.js';
 
 # Select
 
-
 ## Basic usage
 
 <Playground>
-    <State initial={{
-        title: 'hey',
-        align: 'left',
-        list: [
-            {
+    <State initial={{ title: 'Test Title', align: 'left',
+        list: [{
                 title: 'Hello World',
-            }
-        ] }}
-    >
+            }]
+    }}>
         {({ state, setState }) => (
             <Select {...state} />
         )}
