Cleaning menu subgroups

--- a/src/components/overlayTrigger/__docs__/OverlayTrigger.mdx
+++ b/src/components/overlayTrigger/__docs__/OverlayTrigger.mdx
@@ -1,10 +1,12 @@
 ---
 name: Overlay Trigger
+menu: Components
+route: /components/overlay-trigger
 ---
 
 import { Playground, Props } from 'docz';
-import { Tooltip } from './../components/tooltip';
-import OverlayTrigger from './../basic/OverlayTrigger.js';
+import { Tooltip } from './../../tooltip';
+import { OverlayTrigger } from './../index.js';
 
 # Overlay Trigger
 
