--- a/src/components/studyList/__docs__/studyList.mdx
+++ b/src/components/studyList/__docs__/studyList.mdx
@@ -4,26 +4,45 @@ menu: Components
 route: /components/study-list
 ---
 
-
 import { Playground, Props } from 'docz';
 import { State } from 'react-powerplug'
 import { StudyList } from './../index.js';
+// Data
+import defaultStudies from './studies.js';
+import moment from 'moment';
 
-# Simple Dialog
+# Study List
 
-Its similar to a modal but we can pass its style as props and manipulate it as we want. 
-Initially used to display tool data changes in our Viewport.
 
 ## Basic usage
 
 <Playground>
     <State initial={{
+        searchData: {},
+        studies: defaultStudies.filter(study => {
+            const studyDate = moment(study['studyDate'], 'YYYYMMDD');
+            const startDate = moment().subtract(5, 'days');
+            const endDate = moment();
 
+            return studyDate.isBetween(startDate, endDate, 'days', '[]');
+        }).slice(0, 5)
     }}>
         {({ state, setState }) => (
-            <>
-                <StudyList />
-            </>
+        <div className="row" style={{ backgroundColor: '#000', height: '600px' }}>
+            <div className="col-xs-12" style={{ padding: 0 }}>
+                <StudyList
+                    studies={[]}
+                    pageOptions={[1, 2, 3, 5, 10, 15, 20, 25, 50, 100]}
+                    studyListFunctionsEnabled={true}
+                    onImport={(e) => alert('Import study mock ' + e)}
+                    onSelectItem={(studyInstanceUid) => { alert(studyInstanceUid + ' has selected! Now you can open your study.'); }}
+                    rowsPerPage={5}
+                    defaultSort={{ field: 'patientName', order: 'desc', }}
+                    studyListDateFilterNumDays={7}
+                    onSearch={() => { console.log('hi'); }}
+                />
+            </div>
+        </div>
         )}
     </State>
 </Playground>
