Getting started outline

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -4,3 +4,13 @@ route: /
 ---
 
 # Getting Started
+
+- Elements
+- Components
+- Structures
+- Templates
+- Pages
+
+- Global
+- Typography
+- Theme
