Explicit react imports for fragments

--- a/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
+++ b/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
@@ -4,7 +4,7 @@ menu: Components
 route: /components/rounded-button-group
 ---
 
-
+import React from 'react';
 import { Playground, Props } from 'docz';
 import { State } from 'react-powerplug'
 import { RoundedButtonGroup } from './../index.js';
