--- a/src/components/selectTree/__docs__/selectTree.mdx
+++ b/src/components/selectTree/__docs__/selectTree.mdx
@@ -4,6 +4,7 @@ menu: Components
 route: /components/select-tree
 ---
 
+import React from 'react';
 import { Playground, Props } from 'docz';
 import { State } from 'react-powerplug'
 import { SelectTree } from './../index.js';
