--- a/src/components/userPreferencesModal/__docs__/userPreferences.mdx
+++ b/src/components/userPreferencesModal/__docs__/userPreferences.mdx
@@ -4,8 +4,9 @@ menu: Components
 route: /components/user-preferences-modal
 ---
 
+import React from 'react';
 import { Playground, Props } from 'docz';
-import { State } from 'react-powerplug'
+import { State } from 'react-powerplug';
 import { UserPreferencesModal } from './../index.js';
 //
 import windowLevelDefaults from './windowLevelDefaults.js';
