--- a/src/components/overlayTrigger/__docs__/OverlayTrigger.mdx
+++ b/src/components/overlayTrigger/__docs__/OverlayTrigger.mdx
@@ -4,6 +4,7 @@ menu: Components
 route: /components/overlay-trigger
 ---
 
+import React from 'react';
 import { Playground, Props } from 'docz';
 import { Tooltip } from './../../tooltip';
 import { OverlayTrigger } from './../index.js';
