--- a/src/components/simpleDialog/__docs__/simpleDialog.mdx
+++ b/src/components/simpleDialog/__docs__/simpleDialog.mdx
@@ -4,7 +4,7 @@ menu: Components
 route: /components/simple-dialog
 ---
 
-
+import React from 'react';
 import { Playground, Props } from 'docz';
 import { State } from 'react-powerplug'
 import { SimpleDialog } from './../index.js';
