Don't let dialog component outside of the playground

--- a/src/components/simpleDialog/__docs__/simpleDialog.mdx
+++ b/src/components/simpleDialog/__docs__/simpleDialog.mdx
@@ -22,7 +22,8 @@ Initially used to display tool data changes in our Viewport.
         selectValue: '',
         dialogStyle: {
             top: '50px',
-            left: '100px'
+            left: '100px',
+            position: 'absolute'
         }
     }}>
         {({ state, setState }) => (
