--- a/src/components/selectTree/__docs__/selectTree.mdx
+++ b/src/components/selectTree/__docs__/selectTree.mdx
@@ -22,16 +22,13 @@ import selectTreeItems from './selectTreeItems.js';
         {({ state, setState }) => (
             <React.Fragment>
             <pre style={{ maxHeight: '135px', overflowX: 'auto' }}>
-                {JSON.stringify(state.items, null, 4)}
+                {JSON.stringify(state.items, null, 2)}
             </pre>
 
            <SelectTree
                 items={state.items}
-                onSelected={(event, itemSelected) => {
-                    setState({ itemLabelSelected: itemSelected.label });
-                }}
+                onSelected={(event, item) => setState({ itemLabelSelected: item.label }) }
                 selectTreeFirstTitle="Select Tree Example Header"
-                onComponentChange={() => {} }
                 autoFocus={false}
             />
             </React.Fragment>
