--- a/src/components/userPreferencesModal/__docs__/userPreferences.mdx
+++ b/src/components/userPreferencesModal/__docs__/userPreferences.mdx
@@ -4,12 +4,12 @@ menu: Components
 route: /components/user-preferences-modal
 ---
 
-import { Playground, Props } from 'docz';
-import { State } from 'react-powerplug';
-import { UserPreferencesModal } from './../index.js';
+import { Playground, Props } from 'docz'
+import { State } from 'react-powerplug'
+import { UserPreferencesModal } from './../index.js'
 //
-import windowLevelDefaults from './windowLevelDefaults.js';
-import hotkeyDefaults from './hotkeyDefaults.js';
+import windowLevelDefaults from './windowLevelDefaults.js'
+import hotkeyDefaults from './hotkeyDefaults.js'
 
 # User Preferences Modal
 
@@ -41,6 +41,7 @@ import hotkeyDefaults from './hotkeyDefaults.js';
         )}
 
     </State>
+
 </Playground>
 
 ## API
