--- a/src/__docs__/getting-started.mdx
+++ b/src/__docs__/getting-started.mdx
@@ -4,3 +4,73 @@ route: /getting-started
 ---
 
 # Getting Started
+
+## Installation
+
+> This component library is pre- v1.0. All realeases until a v1.0 have the
+> possibility of introducing breaking changes. Please depend on an "exact"
+> version in your projects to prevent issues caused by loose versioning.
+
+Install `react-viewerbase` from npm:
+
+```shell
+// with npm
+npm i react-viewerbase --save-exact
+
+// with yarn
+yarn add react-viewerbase --exact
+```
+
+## Usage
+
+There is some setup required for `react-viewerbase`. We are working to eliminate
+these requirements with the goal of providing ready to use components.
+
+### External Dependencies
+
+Some components use classes provided by the following libraries:
+
+```js
+// fontawesome@5.7.2
+'https://use.fontawesome.com/releases/v5.7.2/css/all.css'
+
+// bootstrap@3.3.7
+'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'
+
+// icons.svg, served from root
+'TODO: Add raw.github url'
+```
+
+### Import & Use
+
+You can use components in your React app:
+
+```js
+import React, { Component } from 'react'
+import { LayoutButton } from 'react-viewerbase'
+
+class Example extends Component {
+  constructor(props) {
+    super(props)
+
+    this.state = {
+      selectedCell: {
+        className: 'hover',
+        col: 1,
+        row: 1,
+      },
+    }
+  }
+
+  render() {
+    return (
+      <LayoutButton
+        selectedCell={this.state.selectedCell}
+        onChange={cell => this.setState({ selectedCell: cell })}
+      />
+    )
+  }
+}
+```
+
+> NOTE: border box and reset note?
