Note usage to aid in contextual viewer creation

--- a/src/__docs__/introduction.mdx
+++ b/src/__docs__/introduction.mdx
@@ -17,6 +17,7 @@ library to:
 - Decouple presentation from business logic
 - Test and develop components in isolation
 - Provide well documented, reusable components
+- Aid rapid application development for context specific viewers
 
 ## Quick Example
 
