Get layoutButton props to render

--- a/src/components/layoutButton/__docs__/layoutButton.mdx
+++ b/src/components/layoutButton/__docs__/layoutButton.mdx
@@ -4,10 +4,10 @@ menu: Components
 route: /components/layout-button
 ---
 
-import { Playground, Props } from 'docz';
+import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { LayoutButton } from './../index.js';
-import './layoutButton.css';
+import { LayoutButton } from './../index.js'
+import './layoutButton.css'
 
 # Layout Button
 
@@ -36,6 +36,7 @@ import './layoutButton.css';
             </React.Fragment>
         )}
     </State>
+
 </Playground>
 
 ## API
