Show quickSwitch props docs

--- a/src/components/quickSwitch/__docs__/quickSwitch.mdx
+++ b/src/components/quickSwitch/__docs__/quickSwitch.mdx
@@ -4,11 +4,11 @@ menu: Components
 route: /components/quick-switch
 ---
 
-import { Playground, Props } from 'docz';
+import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { QuickSwitch } from './../index.js';
+import { QuickSwitch } from './../index.js'
 //
-import studies from './studies.js';
+import studies from './studies.js'
 
 # Quick Switch
 
@@ -53,6 +53,7 @@ import studies from './studies.js';
         )}
 
     </State>
+
 </Playground>
 
 ## API
