Lint fix selectTree

--- a/src/components/selectTree/__docs__/selectTree.mdx
+++ b/src/components/selectTree/__docs__/selectTree.mdx
@@ -4,14 +4,13 @@ menu: Components
 route: /components/select-tree
 ---
 
-import { Playground, Props } from 'docz';
+import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { SelectTree } from './../index.js';
+import { SelectTree } from './../index.js'
 
-import selectTreeItems from './selectTreeItems.js';
+import selectTreeItems from './selectTreeItems.js'
 
 # SelectTree
-
 
 ## Basic usage
 
@@ -35,6 +34,7 @@ import selectTreeItems from './selectTreeItems.js';
         )}
 
     </State>
+
 </Playground>
 
 ## API
