--- a/src/components/cineDialog/__docs__/cineDialog.mdx
+++ b/src/components/cineDialog/__docs__/cineDialog.mdx
@@ -6,7 +6,7 @@ route: /components/cine-dialog
 
 import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { CineDialog } from './../index.js'
+import { CineDialog } from './../CineDialog.js'
 
 # CINE Dialog
 
