--- a/src/components/studyList/__docs__/studyList.mdx
+++ b/src/components/studyList/__docs__/studyList.mdx
@@ -4,17 +4,15 @@ menu: Components
 route: /components/study-list
 ---
 
-import { Playground, Props } from 'docz';
+import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { StudyList } from './../index.js';
+import { StudyList } from './../index.js'
 // Data
-import defaultStudies from './studies.js';
-import onSearch from './onSearch.js';
-import moment from 'moment';
-
+import defaultStudies from './studies.js'
+import onSearch from './onSearch.js'
+import moment from 'moment'
 
 # Study List
-
 
 ## Basic usage
 
@@ -47,6 +45,7 @@ import moment from 'moment';
         </div>
         )}
     </State>
+
 </Playground>
 
 ## API
