lint fix remaining components/elements

--- a/src/components/tableList/__docs__/tableList.mdx
+++ b/src/components/tableList/__docs__/tableList.mdx
@@ -4,12 +4,11 @@ menu: Components
 route: /components/table-list
 ---
 
-import { Playground, Props } from 'docz';
+import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { TableList, TableListItem } from './../index.js';
+import { TableList, TableListItem } from './../index.js'
 
 # Table List
-
 
 ## Basic usage
 
@@ -41,6 +40,7 @@ import { TableList, TableListItem } from './../index.js';
         )}
 
     </State>
+
 </Playground>
 
 ## API
