--- a/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
+++ b/src/components/toolbarSection/__docs__/toolbarSection.docs.mdx
@@ -4,11 +4,10 @@ menu: Components
 route: /components/toolbar-section
 ---
 
-
-import { Playground, Props } from 'docz';
+import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { ToolbarSection } from './../index.js';
-import exampleButtons from './exampleButtons.js';
+import { ToolbarSection } from './../index.js'
+import exampleButtons from './exampleButtons.js'
 
 # ToolbarSection
 
@@ -17,15 +16,17 @@ A basic row of buttons for a toolbar. Active command is `WwwcTool`
 ## Basic usage
 
 <Playground>
-    <State initial={{
-        buttons: exampleButtons,
-        activeCommand: exampleButtons[0].command,
-        setToolActive: () => { alert('pressed'); }
-    }}>
-        {({ state, setState }) => (
-            <ToolbarSection {...state} />
-        )}
-    </State>
+  <State
+    initial={{
+      buttons: exampleButtons,
+      activeCommand: exampleButtons[0].command,
+      setToolActive: () => {
+        alert('pressed')
+      },
+    }}
+  >
+    {({ state, setState }) => <ToolbarSection {...state} />}
+  </State>
 </Playground>
 
 ## API
