--- a/src/elements/form/__docs__/select.docs.mdx
+++ b/src/elements/form/__docs__/select.docs.mdx
@@ -4,24 +4,28 @@ menu: Elements
 route: /elements/form-select
 ---
 
-import { Playground, Props } from 'docz';
+import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
-import { Select } from './../index.js';
+import { Select } from './../index.js'
 
 # Select
 
 ## Basic usage
 
 <Playground>
-    <State initial={{ title: 'Test Title', align: 'left',
-        list: [{
-                title: 'Hello World',
-            }]
-    }}>
-        {({ state, setState }) => (
-            <Select {...state} />
-        )}
-    </State>
+  <State
+    initial={{
+      title: 'Test Title',
+      align: 'left',
+      list: [
+        {
+          title: 'Hello World',
+        },
+      ],
+    }}
+  >
+    {({ state, setState }) => <Select {...state} />}
+  </State>
 </Playground>
 
 ## API
