--- a/src/__docs__/introduction.mdx
+++ b/src/__docs__/introduction.mdx
@@ -11,8 +11,7 @@ import { TableList, TableListItem } from './../index.js'
 
 **React Viewerbase is a collection of components and utilities** that power
 OHIF's [zero-footprint DICOM viewer](https://github.com/OHIF/Viewers)
-([demo](https://viewer.ohif.org/)). We maintain them as a separate component
-library to:
+([demo][demo-url]). We maintain them as a separate component library to:
 
 - Decouple presentation from business logic
 - Test and develop components in isolation
@@ -67,3 +66,11 @@ import { TableList } from 'react-viewerbase'
 ## FAQ
 
 ...
+
+<!--
+  Links
+  -->
+
+<!-- prettier-ignore-start -->
+[demo-url]: https://deploy-preview-321--ohif.netlify.com/demo/viewer/1.3.6.1.4.1.25403.345050719074.3824.20170126085406.1
+<!-- prettier-ignore-end -->
