Lowercase layout button import for file in same dir

--- a/src/components/layoutButton/__docs__/layoutButton.mdx
+++ b/src/components/layoutButton/__docs__/layoutButton.mdx
@@ -7,7 +7,7 @@ route: /components/layout-button
 import { Playground, Props } from 'docz'
 import { State } from 'react-powerplug'
 import { LayoutButton } from './../index.js'
-import './LayoutButton.css'
+import './layoutButton.css'
 
 # Layout Button
 
