--- a/src/__docs__/getting-started.mdx
+++ b/src/__docs__/getting-started.mdx
@@ -37,6 +37,9 @@ Some components use classes provided by the following libraries:
 // bootstrap@3.3.7
 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'
 
+// Google Fonts, Sanchez & Roboto
+'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Sanchez&display=swap'
+
 // icons.svg, served from root
 'TODO: Add raw.github url'
 ```
