Stub remaining icons

--- a/src/components/Icon/__docs__/icon.mdx
+++ b/src/components/Icon/__docs__/icon.mdx
@@ -52,3 +52,8 @@ import { Icon, IconTypes } from './../index.js'
 ## API
 
 <Props of={Icon} />
+
+## Attribution
+
+Some of our icons, while free to use, have an attribution requirement. You can
+find that information here.
