Adding new icons; using tweaked format

--- a/src/components/Icon/__docs__/icon.mdx
+++ b/src/components/Icon/__docs__/icon.mdx
@@ -38,7 +38,7 @@ import { Icon, IconTypes } from './../index.js'
               alignItems: 'center',
             }}
           >
-            <Icon name={name} width="24px" height="24px" fill="white" />
+            <Icon name={name} width="24px" height="24px" color="white" />
             <div style={{ fontSize: '12px', wordWrap: 'break-word' }}>
               {name}
             </div>
