Details for attribution

--- a/src/components/Icon/__docs__/icon.mdx
+++ b/src/components/Icon/__docs__/icon.mdx
@@ -57,3 +57,14 @@ import { Icon, IconTypes } from './../index.js'
 
 Some of our icons, while free to use, have an attribution requirement. You can
 find that information here.
+
+| Icon                | Attribution                                  |
+| ------------------- | -------------------------------------------- |
+| `spinner-group`     | [FontAwesome][fa-license], CC-by-Attribution |
+| `angle-double-up`   | [FontAwesome][fa-license], CC-by-Attribution |
+| `angle-double-down` | [FontAwesome][fa-license], CC-by-Attribution |
+| `check-circle`      | [FontAwesome][fa-license], CC-by-Attribution |
+| `fast-backward`     | [FontAwesome][fa-license], CC-by-Attribution |
+| `check-solid`       | [FontAwesome][fa-license], CC-by-Attribution |
+
+[fa-license]: https://fontawesome.com/license
