Add icons that were referenced using fa-* classes

--- a/src/components/Icon/__docs__/icon.mdx
+++ b/src/components/Icon/__docs__/icon.mdx
@@ -60,11 +60,24 @@ find that information here.
 
 | Icon                | Attribution                                  |
 | ------------------- | -------------------------------------------- |
-| `spinner-group`     | [FontAwesome][fa-license], CC-by-Attribution |
-| `angle-double-up`   | [FontAwesome][fa-license], CC-by-Attribution |
 | `angle-double-down` | [FontAwesome][fa-license], CC-by-Attribution |
+| `angle-double-up`   | [FontAwesome][fa-license], CC-by-Attribution |
+| `arrows-alt-h`      | [FontAwesome][fa-license], CC-by-Attribution |
+| `arrows-alt-v`      | [FontAwesome][fa-license], CC-by-Attribution |
 | `check-circle`      | [FontAwesome][fa-license], CC-by-Attribution |
-| `fast-backward`     | [FontAwesome][fa-license], CC-by-Attribution |
 | `check-solid`       | [FontAwesome][fa-license], CC-by-Attribution |
+| `circle`            | [FontAwesome][fa-license], CC-by-Attribution |
+| `circle-outline`    | [FontAwesome][fa-license], CC-by-Attribution |
+| `edit`              | [FontAwesome][fa-license], CC-by-Attribution |
+| `fast-backward`     | [FontAwesome][fa-license], CC-by-Attribution |
+| `fast-forward`      | [FontAwesome][fa-license], CC-by-Attribution |
+| `play`              | [FontAwesome][fa-license], CC-by-Attribution |
+| `spinner-group`     | [FontAwesome][fa-license], CC-by-Attribution |
+| `square-outline`    | [FontAwesome][fa-license], CC-by-Attribution |
+| `step-backward`     | [FontAwesome][fa-license], CC-by-Attribution |
+| `step-forward`      | [FontAwesome][fa-license], CC-by-Attribution |
+| `stop`              | [FontAwesome][fa-license], CC-by-Attribution |
+| `sun`               | [FontAwesome][fa-license], CC-by-Attribution |
+| `trash`             | [FontAwesome][fa-license], CC-by-Attribution |
 
 [fa-license]: https://fontawesome.com/license
