More icon migration

--- a/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
+++ b/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
@@ -21,16 +21,16 @@ A basic styled toggle switch
       options: [
         {
           value: 'studies',
-          svgLink: '/icons.svg#icon-studies',
-          svgWidth: 15,
-          svgHeight: 13,
+          iconName: 'studies',
+          iconWidth: '15px',
+          iconHeight: '13px',
           bottomLabel: 'Series',
         },
         {
           value: 'measurements',
-          svgLink: '/icons.svg#icon-measurements-lesions',
-          svgWidth: 18,
-          svgHeight: 10,
+          iconName: 'measurement-lesions',
+          iconWidth: '18px',
+          iconHeight: '10px',
           bottomLabel: 'Measurements',
         },
       ],
