--- a/src/elements/form/__docs__/select.docs.mdx
+++ b/src/elements/form/__docs__/select.docs.mdx
@@ -19,7 +19,16 @@ import { Select } from './../index.js'
       align: 'left',
       list: [
         {
-          title: 'Hello World',
+          title: 'Edit',
+          icon: {
+            name: 'edit',
+          },
+        },
+        {
+          title: 'Retry',
+          icon: {
+            name: 'tool-reset',
+          },
         },
       ],
     }}
