Replace instances of iconName

--- a/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
+++ b/src/components/roundedButtonGroup/__docs__/roundedButtonGroup.mdx
@@ -21,16 +21,20 @@ A basic styled toggle switch
       options: [
         {
           value: 'studies',
-          iconName: 'studies',
-          iconWidth: '15px',
-          iconHeight: '13px',
+          icon: {
+            name: 'studies',
+            width: '15px',
+            height: '13px',
+          },
           bottomLabel: 'Series',
         },
         {
           value: 'measurements',
-          iconName: 'measurement-lesions',
-          iconWidth: '18px',
-          iconHeight: '10px',
+          icon: {
+            name: 'measurement-lesions',
+            width: '18px',
+            height: '10px',
+          },
           bottomLabel: 'Measurements',
         },
       ],
