--- a/src/elements/form/__docs__/select.docs.mdx
+++ b/src/elements/form/__docs__/select.docs.mdx
@@ -4,9 +4,9 @@ menu: Elements
 route: /elements/form-select
 ---
 
-import { Playground, Props } from 'docz'
-import { State } from 'react-powerplug'
-import { Select } from './../index.js'
+import { Playground, Props } from 'docz';
+import { State } from 'react-powerplug';
+import { Select } from './../index.js';
 
 # Select
 
@@ -27,7 +27,7 @@ import { Select } from './../index.js'
         {
           title: 'Retry',
           icon: {
-            name: 'tool-reset',
+            name: 'reset',
           },
         },
       ],
