--- a/src/elements/Icon/__docs__/icon.mdx
+++ b/src/elements/Icon/__docs__/icon.mdx
@@ -57,7 +57,8 @@ readers.
 
 We use `airbnb`'s [`babel-plugin-inline-react-svg`][airbnb] to automate
 optimizing SVG files with [SVGO][svgo] and to create animatable React SVG
-components that can be requested asynchronously.
+components that can be requested asynchronously. You can configure SVGO's
+plugins [by following the advice laid out here][svgo-configure]
 
 ## API
 
@@ -73,6 +74,9 @@ little as a comment included side-by-side with the accompanying SVG icon.
   Links
 -->
 
+<!-- prettier-ignore-start -->
 [fa-license]: https://fontawesome.com/license
 [airbnb]: https://github.com/airbnb/babel-plugin-inline-react-svg
 [svgo]: https://github.com/svg/svgo/
+[svgo-configure]: https://github.com/airbnb/babel-plugin-inline-react-svg/issues/9#issuecomment-310178317)
+<!-- prettier-ignore-end -->
