Fix react demo url

--- a/src/__docs__/introduction.mdx
+++ b/src/__docs__/introduction.mdx
@@ -72,5 +72,5 @@ import { TableList } from 'react-viewerbase'
   -->
 
 <!-- prettier-ignore-start -->
-[demo-url]: https://deploy-preview-321--ohif.netlify.com/demo/viewer/1.3.6.1.4.1.25403.345050719074.3824.20170126085406.1
+[demo-url]: https://docs.ohif.org/demo/
 <!-- prettier-ignore-end -->
